force-app/main/default/objects/Item_Approval_Status__e/Item_Approval_Status__e.object-meta.xml
<CustomObject>
    <label>Item Approval Status</label>
    <pluralLabel>Item Approval Statuses</pluralLabel>
</CustomObject>