force-app/main/default/objects/Item_Approval_Status__e/fields/Item_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Item_External_Id__c</fullName>
    <label>Item External Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>