force-app/main/default/objects/Item_Approval_Status__e/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <length>25</length>
    <type>Text</type>
</CustomField>