force-app/main/default/objects/Item_Approval_Status__e/fields/Strategy__c.field-meta.xml
<CustomField>
    <fullName>Strategy__c</fullName>
    <label>Strategy</label>
    <length>30</length>
    <type>Text</type>
</CustomField>